Update and rename .env.template to .env

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 
 # Your openai api key. (required)
-OPENAI_API_KEY=sk-xxxx
+OPENAI_API_KEY=nv-30bVqUG136OK8PmNbXrkN0V4x0SSacDnnBprfvIe1rO2gh6l
 
 # Access passsword, separated by comma. (optional)
-CODE=your-password
+CODE=
 
 # You can start service behind a proxy
-PROXY_URL=http://localhost:7890
+PROXY_URL=
 
 # Override openai api request base url. (optional)
 # Default: https://api.openai.com
 # Examples: http://your-openai-proxy.com
-BASE_URL=
+BASE_URL=https://api.nova-oss.com/v1
 
 # Specify OpenAI organization ID.(optional)
 # Default: Empty
@@ -21,7 +21,7 @@ OPENAI_ORG_ID=
 # (optional)
 # Default: Empty
 # If you do not want users to input their own API key, set this value to 1.
-HIDE_USER_API_KEY=
+HIDE_USER_API_KEY=1
 
 # (optional)
 # Default: Empty
